--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
   "bugs": {
     "url": "https://github.com/OlegPeunov/terem-task_JQ_Bootstrap/issues"
   },
-  "homepage": "https://github.com/OlegPeunov/terem-task_JQ_Bootstrap#readme",
+  "homepage": "https://github.com/OlegPeunov/terem-task_JQ_Bootstrap#readme"
 
 }
